暂时全部接受完成